--- a/panorama/AndroidManifest.xml
+++ b/panorama/AndroidManifest.xml
@@ -10,13 +10,18 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application android:icon="@drawable/icon"
-                 android:label="@string/app_name">
+                 android:label="@string/app_name"
+                 android:largeHeap="true">
         <activity android:name="PanoramaActivity"
                   android:label="@string/app_name"
                   android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.ros.turtlebot.apps.panorama.PanoramaActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
