--- a/panorama/project.properties
+++ b/panorama/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../../../turtlebot_android/android_core/android_gingerbread_mr1/
+android.library.reference.1=../../android_core/android_gingerbread_mr1/
