--- a/core_components/project.properties
+++ b/core_components/project.properties
@@ -11,6 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-10
+target=android-15
 android.library.reference.1=../android_gingerbread_mr1
 android.library=true
+android.library.reference.2=../../../turtlebot_android/android_core/android_gingerbread_mr1
