--- a/panorama/project.properties
+++ b/panorama/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=android-17
 android.library.reference.1=../android_gingerbread_mr1/
+android.library.reference.2=../core_components
