--- a/turtlebot_android_core_components/AndroidManifest.xml
+++ b/turtlebot_android_core_components/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.ros.turtlebot.apps.core_components"
+      package="org.ros.android.turtlebot.apps.core_components"
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10" />
