--- a/follower/src/main/AndroidManifest.xml
+++ b/follower/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.ros.turtlebot.apps.follower"
+      package="com.github.turtlebot.turtlebot_android.follower"
       android:versionCode="102"
       android:versionName="1.0.2">
     <uses-sdk android:minSdkVersion="10"
@@ -18,13 +18,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.ros.turtlebot.apps.follower.FollowerActivity" />
+                <action android:name="com.github.turtlebot.turtlebot_android.follower.FollowerActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         
         <activity android:name="org.ros.android.MasterChooser" />
 
-        <service android:name="org.ros.android.NodeMainExecutorService" />
+        <service android:name="org.ros.android.NodeMainExecutorService">
+            <intent-filter>
+                <action android:name="org.ros.android.NodeMainExecutorService" />
+            </intent-filter>
+        </service>
     </application>
 </manifest>
