--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,58 @@
+/*
+ * Copyright (C) 2013 Yujin Robot
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not
+ * use this file except in compliance with the License. You may obtain a copy of
+ * the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+ * License for the specific language governing permissions and limitations under
+ * the License.
+ */
+
 task wrapper(type: Wrapper) {
-  gradleVersion = '1.0-milestone-9'
+  gradleVersion = '1.6'
 }
 
 allprojects {
-  group 'ros.turtlebot_android'
-  version = '0.0.0-SNAPSHOT'
+  group 'com.github.turtlebot.turtlebot_android'
+  version = '0.1.0'
 }
+
+ext.androidBuildToolsVersion = "17"
 
 subprojects {
-  repositories {
-    mavenLocal()
-    mavenCentral()
-  }
+    buildscript {
+        repositories {
+            mavenCentral()
+        }
+        dependencies {
+            classpath 'com.android.tools.build:gradle:0.4.1'
+        }
+    }
+    apply plugin: 'maven'
+    apply plugin: 'maven-publish'
+    repositories {
+        mavenLocal()
+        maven {
+            url 'http://robotbrains.hideho.org/nexus/content/groups/ros-public'
+        }
+    }
+    configurations.add('compile') {
+        exclude group: 'junit'
+        exclude group: 'xml-apis'
+    }
 
-  configurations.add('compile') {
-    exclude group: 'junit'
-    exclude group: 'xml-apis'
-  }
-
-  task deployLibs(type: Copy) {
-    from { configurations.compile }
-    into "${projectDir}/libs"
-  }
-
-  task clean << {
-    ant.delete file: "${projectDir}/local.properties"
-    ant.delete file: "${projectDir}/proguard-project.txt"
-    ant.delete file: "${projectDir}/build.xml"
-    ant.delete dir: "${projectDir}/bin"
-    ant.delete dir: "${projectDir}/gen"
-    ant.delete dir: "${projectDir}/libs"
-  }
-
-  task debug(type: Exec) {
-    dependsOn deployLibs
-    commandLine 'ant', 'debug'
-  }
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                repository url: 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
+            }
+        }
+    }
 }
+
