--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include 'turtlebot_android_panorama'
-include 'turtlebot_android_follower'
-include 'turtlebot_android_core_components'
+include 'panorama'
+include 'follower'
+include 'core_components'
 
