--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,6 @@ subprojects {
         }
     }
     apply plugin: 'maven'
-    apply plugin: 'maven-publish'
     repositories {
         mavenLocal()
         maven {
@@ -52,6 +51,14 @@ subprojects {
             mavenDeployer {
                 repository url: 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
             }
+        }
+    }
+    task publishToMavenLocal() << {
+        description = 'installs .aar files to the local maven repository.'
+    }
+    afterEvaluate { Project project ->
+        if (plugins.findPlugin('android-library')) {
+            publishToMavenLocal.dependsOn('uploadArchives')
         }
     }
 }
