--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rosjava_tools</build_depend>
   <build_depend>android_core</build_depend>
+  <build_depend>android_extras</build_depend>
   <build_depend>android_apps</build_depend>
   <build_depend>rosjava_core</build_depend>
   <build_depend>create_node</build_depend>
