--- a/turtlebot_core/build.gradle
+++ b/turtlebot_core/build.gradle
@@ -15,8 +15,8 @@
  */
 
 dependencies {
-  compile 'com.github.ros_java.android_apps:application_management:0.1.0'
-  compile 'com.github.ros_java.android_extras:gingerbread:0.1.0'
+  compile 'com.github.rosjava.android_apps:application_management:0.1.0'
+  compile 'com.github.rosjava.android_extras:gingerbread:0.1.0'
   compile 'ros.rosjava_core:rosjava:0.0.0-SNAPSHOT'
 }
 
