Upgrade according with the final android developement environement Also implements issue #6: use service files from turtlebot_msgs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(turtlebot_android)
 
-find_package(catkin REQUIRED rosjava_tools)
+find_package(catkin REQUIRED rosjava_build_tools)
+####find_package(catkin REQUIRED uploadArchives)
 
-catkin_android_setup(assembleRelease publisToMavenLocal)
+catkin_android_setup(assembleRelease uploadArchives)
 
 catkin_package()
 
