--- a/turtlebot_core/build.gradle
+++ b/turtlebot_core/build.gradle
@@ -15,16 +15,19 @@
  */
 
 dependencies {
-  compile 'com.github.rosjava.android_apps:application_management:0.1.0'
-  compile 'com.github.rosjava.android_extras:gingerbread:0.1.0'
-  compile 'ros.rosjava_core:rosjava:0.0.0-SNAPSHOT'
+  compile 'com.github.rosjava.android_apps:application_management:0.1.+'
+  compile 'org.ros.android_core:android_gingerbread_mr1:0.1.+'
+  compile 'org.ros.rosjava_core:rosjava:0.1.+'
+
+//  compile 'com.github.rosjava.android_apps:application_management:0.1.0'
+//  compile 'com.github.rosjava.android_extras:gingerbread:0.1.0'
+//  compile 'ros.rosjava_core:rosjava:0.0.0-SNAPSHOT'
 }
 
 apply plugin: 'android-library'
 
 android {
     compileSdkVersion 10
-    buildToolsVersion androidBuildToolsVersion
 }
 
 
