--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(turtlebot_android)
 find_package(catkin REQUIRED rosjava_build_tools)
 ####find_package(catkin REQUIRED uploadArchives)
 
-catkin_android_setup(assembleRelease uploadArchives)
+catkin_android_setup(assemble uploadArchives)
 
 catkin_package()
 
