Update Android Panorama and Follower for Indigo

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,7 @@
-include 'panorama'
-include 'follower'
+/*
+ *include 'panorama'
+ *include 'follower'
+ */
+
+ include 'panorama'
+ include 'follower'
