--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,12 @@
  * the License.
  */
 task wrapper(type: Wrapper) {
-    gradleVersion = '1.8'
+    gradleVersion = '1.11'
 }
 
 buildscript {
     def rosMavenPath = "$System.env.ROS_MAVEN_PATH".split(':').collect { 'file://' + it }
+    def rosMavenRepository = "$System.env.ROS_MAVEN_REPOSITORY"
     repositories {
         rosMavenPath.each { p ->
             maven {
@@ -45,3 +46,6 @@ allprojects {
 subprojects {
     apply plugin: 'ros-android'
 }
+
+
+defaultTasks 'assembleRelease'
