--- a/follower/src/main/AndroidManifest.xml
+++ b/follower/src/main/AndroidManifest.xml
@@ -2,15 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.github.turtlebot.turtlebot_android.follower"
       android:versionCode="3"
-      android:versionName="1.1.0">
-    <uses-sdk android:minSdkVersion="10"
-              android:targetSdkVersion="17" />
+      android:versionName="1.0"
+      xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-sdk android:minSdkVersion="13"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application android:label="@string/app_name"
-                 android:icon="@drawable/icon">
+                 android:icon="@drawable/icon"
+                 tools:replace="icon, label">
         <activity android:name="FollowerActivity"
                   android:label="@string/app_name">
             <intent-filter>
