--- a/panorama/build.gradle
+++ b/panorama/build.gradle
@@ -15,7 +15,7 @@
  */
 
 dependencies {
-  compile 'com.github.rosjava.android_apps:application_management:0.1.+'
+  compile 'com.github.rosjava.android_remocons:common_tools:[0.1,0.2)'
   compile 'org.ros.android_core:android_gingerbread_mr1:0.1.+'
   compile 'org.ros.rosjava_core:rosjava:0.1.+'
   compile 'org.ros.rosjava_messages:turtlebot_msgs:2.2.+'
@@ -24,6 +24,10 @@ dependencies {
 apply plugin: 'android'
   
 android {
+	packagingOptions {
+		exclude 'META-INF/LICENSE.txt'
+		exclude 'META-INF/NOTICE.txt'
+	}
     compileSdkVersion 15
 }
 
