--- a/panorama/src/main/AndroidManifest.xml
+++ b/panorama/src/main/AndroidManifest.xml
@@ -2,16 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.github.turtlebot.turtlebot_android.panorama"
       android:versionCode="3"
-      android:versionName="1.1.0">
-    <uses-sdk android:minSdkVersion="15"
-              android:targetSdkVersion="17" />
+      android:versionName="1.0"
+      xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-sdk android:minSdkVersion="13"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application android:icon="@drawable/icon"
                  android:label="@string/app_name"
-                 android:largeHeap="true">
+                 android:largeHeap="true"
+                 tools:replace="icon, label">
         <activity android:name="PanoramaActivity"
                   android:label="@string/app_name"
                   android:configChanges="orientation|screenSize">
