--- a/follower/src/main/AndroidManifest.xml
+++ b/follower/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
                  android:icon="@drawable/icon"
                  tools:replace="icon, label">
         <activity android:name="FollowerActivity"
-                  android:screenOrientation="portrait"
+                  android:configChanges="orientation|screenSize"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
