--- a/follower/src/main/AndroidManifest.xml
+++ b/follower/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
                  android:icon="@drawable/icon"
                  tools:replace="icon, label">
         <activity android:name="FollowerActivity"
+                  android:screenOrientation="landscape"
                   android:configChanges="orientation|screenSize"
                   android:label="@string/app_name">
             <intent-filter>
