--- a/build.gradle
+++ b/build.gradle
@@ -14,37 +14,32 @@
  * the License.
  */
 task wrapper(type: Wrapper) {
-    gradleVersion = '1.11'
+    gradleVersion = '2.2.1'
 }
 
 buildscript {
-    def rosMavenPath = "$System.env.ROS_MAVEN_PATH".split(':').collect { 'file://' + it }
-    def rosMavenRepository = "$System.env.ROS_MAVEN_REPOSITORY"
-    repositories {
-        rosMavenPath.each { p ->
-            maven {
-                url p
-            }
-        }
-        mavenLocal()
-        maven {
-            url 'https://github.com/rosjava/rosjava_mvn_repo/raw/master'
-        }
-    }
-    dependencies {
-        classpath group: 'org.ros.rosjava_bootstrap', name: 'gradle_plugins', version: '0.1.+'
-    }
+    apply from: "https://github.com/rosjava/android_core/raw/indigo/buildscript.gradle"
 }
 
 apply plugin: 'catkin'
 
 allprojects {
-    group 'com.github.rosjava.android_apps'
+    group 'com.github.turtlebot.turtlebot_android'
     version = project.catkin.pkg.version
 }
 
 subprojects {
     apply plugin: 'ros-android'
+
+    afterEvaluate { project ->
+        android {
+            packagingOptions {
+                /* https://github.com/rosjava/android_core/issues/194 */
+                exclude 'META-INF/LICENSE.txt'
+                exclude 'META-INF/NOTICE.txt'
+            }
+        }
+    }
 }
 
 
